--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background: url('bg-desktop.webp');
+    background-color: rgb(10, 10, 121);
     font-family: monospace;
 }
 
@@ -15,7 +15,7 @@ body {
     justify-content: space-between;
     padding: 4rem;
     gap: 3rem;
-    box-shadow: 1px 1px 20px purple;
+    box-shadow: 1px 1px 20px rgb(255, 255, 255);
 }
 
 .cartao {
@@ -23,7 +23,7 @@ body {
     height: 20rem;
     flex-grow: 1;
     flex-basis: calc(33% - 6rem);
-    box-shadow: 1px 1px 20px purple;
+    box-shadow: 1px 1px 20px rgb(255, 255, 255);
 }
 
 .cartao__conteudo {
@@ -32,12 +32,12 @@ body {
     height: 100%;
     transform-style: preserve-3d;
     transition: transform 300ms ease-in-out;
-    box-shadow: 1px 1px 20px rgb(149, 0, 255);
+    box-shadow: 1px 1px 20px rgb(255, 255, 255);
 }
 
 .cartao__conteudo h3 {
     color: var(--text-color);
-    border: 4px solid purple;
+    border: 4px solid rgb(255, 253, 255);
     text-align: left;
     padding: 0.5rem;
     position: absolute;
@@ -45,7 +45,7 @@ body {
     border-radius: 0.6rem;
     font-size: 1vw;
     backface-visibility: hidden;
-    box-shadow: 1px 1px 20px rgb(179, 0, 255);
+    box-shadow: 1px 1px 20px rgb(255, 255, 255);
 }
 
 .cartao__conteudo p {
@@ -81,12 +81,12 @@ body {
 .cartao__conteudo__resposta {
     transform: rotateY(180deg);
     background-color: black;
-    border: 4px solid green;
+    border: 4px solid rgb(255, 255, 255);
 }
 
 footer {
     background-color: black;
-    color: blueviolet;;
+    color: rgb(255, 255, 255);;
     font-size: larger;
     position: fixed;
     bottom: 0;
@@ -128,7 +128,7 @@ footer p {
 }
 
 h1{
-    color: blueviolet;
+    color: rgb(255, 255, 255);
     font-size: larger;
     text-align: center;
     font-family: monospace;
@@ -142,7 +142,7 @@ h1{
     left: calc(100% - 20px);
     width: 50px;
     height: 50px;
-    background: green;
+    background: rgb(255, 255, 255);
     border-radius: 50%;
     animation: ball-move8234 3s ease-in-out 1s infinite alternate;
   }
@@ -161,7 +161,7 @@ h1{
   .bar {
     width: 200px;
     height: 12.5px;
-    background: purple;
+    background: rgb(255, 238, 0);
     border-radius: 30px;
     transform: rotate(-15deg);
     animation: up-down6123 3s ease-in-out 1s infinite alternate;
